--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.app.fartsounds"
-        minSdkVersion 17
-        targetSdkVersion 30
+        applicationId "com.funnyringtone.bestringtones"
+        minSdkVersion 21
+        targetSdkVersion 31
         versionCode 4
         versionName "2.2"
         multiDexEnabled true
@@ -21,34 +21,37 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
 }
 
 dependencies {
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    implementation 'androidx.navigation:navigation-fragment:2.3.0'
-    implementation 'androidx.navigation:navigation-ui:2.3.0'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.navigation:navigation-fragment:2.4.1'
+    implementation 'androidx.navigation:navigation-ui:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'org.greenrobot:eventbus:3.2.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.test:monitor:1.5.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
 
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
+    implementation 'com.github.Muki1992:MaterialLoadingButton:1.0'
 
-    //IROUN SOURCE
-    implementation 'com.ironsource.sdk:mediationsdk:7.1.12.1'
-    implementation 'com.google.android.gms:play-services-ads-identifier:17.1.0'
-    implementation 'com.google.android.gms:play-services-basement:17.6.0'
-    implementation 'com.ironsource.adapters:facebookadapter:4.3.26'
-    implementation 'com.facebook.android:audience-network-sdk:6.5.1'
+    //admob
+    implementation 'com.google.android.gms:play-services-ads:19.4.0'
+
 
 
 }
