--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         maven {
             url "https://android-sdk.is.com/"
         }
+        maven { url 'https://jitpack.io' }
         mavenCentral()
         jcenter()
     }
